<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/L_Sub_Txt"
        android:background="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/SignIn_Title"
        android:textColor="@color/Title_Txt"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/SignIn_Text"
        android:textColor="@color/Sub_Txt"/>

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_back"
        android:drawableEnd="@drawable/ic_mobile_numbe"
        android:drawableTint="@color/Border_Txt"
        android:hint="@string/Mobile_Hint"
        android:padding="10dp"
        android:textColorHint="@color/Sub_Txt" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_back"
        android:drawableEnd="@drawable/ic_password"
        android:drawableTint="@color/Border_Txt"
        android:hint="@string/Password_Hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/Sub_Txt"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="9dp">

        <ImageView
            android:id="@+id/valid_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_invalid" />

        <TextView
            android:id="@+id/valid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter password!"
            android:textColor="@color/invalidCR_Color" />
    </LinearLayout>

    <Button
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/Forgot_ST"
        android:textAllCaps="false"
        android:textColor="@color/App_Color"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_back"
        android:padding="0dp"
        android:text="@string/SignIn_Title"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp_ST"
        android:textColor="@color/Sub_Txt" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:padding="0dp"
        android:text="@string/SignUp_Title"
        android:textAllCaps="false"
        android:textColor="@color/App_Color"
        android:gravity="left" />

    </LinearLayout>
</ScrollView>